Incorporated elegant  fix to theme.css to avoid site jumping on windows when scrollbar is hidden

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -104,6 +104,7 @@ img {
 @media screen and (min-width: 768px) {
   html {
     font-size: 1em;
+    margin-left: calc(100vw - 100%);
   }
   .container {
     max-width: 50rem;
